<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="EN_StationStatus" Id="{a87802aa-6543-43bf-ae04-995c4640f492}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE EN_StationStatus :
(
	estopped			:=0,
	stopped				:=1,
	maintenance			:=2,
	initializing		:=3,
	idle				:=4,
	running				:=5
	);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>